adding LocationConfirmation page

--- a/app/src/main/res/layout/services_bottom_sheet.xml
+++ b/app/src/main/res/layout/services_bottom_sheet.xml
@@ -35,7 +35,7 @@
             android:orientation="vertical"
             android:layout_height="wrap_content">
 
-
+<!--
             <Button
                 android:id="@+id/harvesting_crop_card"
                 android:layout_width="match_parent"
@@ -43,13 +43,19 @@
                 android:focusable="true"
                 android:layout_height="match_parent"
                 android:background="#00000000"/>
+                -->
 
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/lightWhite"
+                android:background="#FFFFFF"
+                android:clickable="true"
+                android:focusable="true"
+                
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
 
@@ -142,6 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:text="Note: * It will apply when you sell crop at time of harvesting crop"/>
 
