--- a/app/src/main/res/layout/activity_location_permission.xml
+++ b/app/src/main/res/layout/activity_location_permission.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".CombineActivities.LocationPermission">
+    tools:context=".Common.LocationPermission">
 
     <RelativeLayout
         android:id="@+id/permission_top_bar"
