--- a/app/src/main/res/layout/activity_machine_owner_apply_page1.xml
+++ b/app/src/main/res/layout/activity_machine_owner_apply_page1.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".User.MachineOwner.MachineOwnerApplyPage1">
+    tools:context=".Home.MachineApplication.MachineOwnerApplyPage1">
 
     <LinearLayout
         android:layout_width="match_parent"
