--- a/app/src/main/res/layout/activity_machine_owner_apply_success.xml
+++ b/app/src/main/res/layout/activity_machine_owner_apply_success.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".User.MachineOwner.MachineOwnerApplySuccess"
+    tools:context=".Home.MachineApplication.MachineOwnerApplySuccess"
     android:background="@color/white"
     android:padding="30dp"
     android:orientation="vertical">
