--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:scrollbarSize="0dp"
-    tools:context=".User.Notification">
+    tools:context=".Home.Notification">
 
 
     <LinearLayout
