--- a/app/src/main/res/layout/activity_payments_history.xml
+++ b/app/src/main/res/layout/activity_payments_history.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".Menu.PaymentsHistory">
+    tools:context=".Profile.PaymentsHistory">
 
 
     <LinearLayout
