--- a/app/src/main/res/layout/activity_refer_and_earn.xml
+++ b/app/src/main/res/layout/activity_refer_and_earn.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Menu.ReferAndEarn">
+    tools:context=".Profile.ReferAndEarn">
 
 
     <RelativeLayout
