--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Menu.UserProfile">
+    tools:context=".Profile.UserProfile">
 
     <LinearLayout
         android:layout_width="match_parent"
