--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -45,16 +45,16 @@
         android:layout_height="150dp"
         android:background="@color/white"
         android:layout_above="@id/bottom_navigation">
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:padding="10dp"
             android:text="Welcome Rishabh "
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="20dp"
-            android:padding="10dp"/>
-
-
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/bottom_sheet_btn"
