--- a/app/src/main/res/layout/activity_refer_and_earn.xml
+++ b/app/src/main/res/layout/activity_refer_and_earn.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/colorSecondary">
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/refer_back_pressed"
