--- a/app/src/main/res/layout/support_card_design.xml
+++ b/app/src/main/res/layout/support_card_design.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="12dp"
-    app:cardElevation="2dp"
+    android:layout_width="150dp"
+    android:layout_height="140dp"
     android:layout_margin="10dp"
     android:elevation="2dp"
     app:cardBackgroundColor="@color/white"
-    >
+    app:cardCornerRadius="8dp"
+    app:cardElevation="2dp">
 
     <RelativeLayout
         android:id="@+id/support_relative"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
-
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <ImageView
             android:id="@+id/support_image"
             android:layout_width='wrap_content'
             android:layout_height='wrap_content'
-            android:padding="5dp"/>
+            android:padding="5dp" />
+
         <TextView
             android:id="@+id/support_title"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Billing and\n Payment"
-            android:textSize="20dp"
-            android:padding="5dp"
             android:layout_below="@id/support_image"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily='@font/muli_semibold'
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            android:padding="5dp"
+            android:text="Billing and\n Payment"
+            android:textAlignment="center"
+            android:textSize="20dp" />
 
 
     </RelativeLayout>
