--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -131,10 +131,70 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/dashboard_weather"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_below="@id/dashboard_slider_layout">
+
+                <View
+                    android:id="@+id/dashboard_top_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/colorSecondaryText"/>
+
+                <RelativeLayout
+                    android:id="@+id/dashboard_weather_relative_layout"
+                    android:layout_below="@id/dashboard_top_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Latest Weather Condition"
+                        android:textStyle="bold"
+                        android:padding="5dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="View all"
+                        android:padding="5dp"
+                        android:layout_alignParentEnd="true"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_below="@+id/dashboard_weather_relative_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@id/dashboard_bottom_view">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        >
+
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/dashboard_bottom_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@color/colorSecondaryText"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/dashboard_top_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/dashboard_slider_layout"
+                android:layout_below="@id/dashboard_weather"
 
                 android:layout_margin="15dp"
 
