--- a/app/src/main/res/layout/activity_location_permission.xml
+++ b/app/src/main/res/layout/activity_location_permission.xml
@@ -1,139 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
+    android:overScrollMode="never"
+    android:scrollbars="none"
     tools:context=".Common.LocationPermission">
-
-    <RelativeLayout
-        android:id="@+id/permission_top_bar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:elevation="0dp"
-            android:fontFamily="@font/muli_semibold"
-            android:text="App Permissions"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-
-    </RelativeLayout>
-
-    <ScrollView
-        android:layout_below="@id/permission_top_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_margin="20dp"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="10dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="30dp"
-                        android:fontFamily="@font/muli_semibold"
-                        android:text="Terms of Service &amp; Privacy"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="50dp"
-                        android:fontFamily="@font/muli"
-                        android:gravity="center"
-                        android:padding="15dp"
-                        android:text="We understand the nature of senstivity of this topic and have taken measures to ensure that your data is not compromised "
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </RelativeLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/muli_semibold"
-                android:text="Device Location"
-                android:textColor="@color/black"
-                android:textSize="16dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/muli"
-                android:text="It is recommended that you set your location sharing to 'Always' you can change this anytime later." />
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="100dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:fontFamily="@font/muli"
-                    android:gravity="center"
-
-                    android:text="If you would like to contribute to 'Agricultural Industry' please indicate your acceptance of the Terms of Service and Privacy Policy by clicking on button below: " />
-
-            </RelativeLayout>
-
-
-
-        </LinearLayout>
-    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:elevation="1dp"
-        android:padding="20dp"
-        android:gravity="center">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/permission_btn"
+
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="80dp"
+            android:contentDescription="Balle Balle"
+            android:src="@drawable/location_permission_image" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
             android:gravity="center"
-            android:background="@drawable/button_background"
-            android:text="I Agree"
-            android:textAllCaps="false"
+            android:text="Location &amp; Phone \npermissions required"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-            android:textColor="@color/white" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="50dp"
+            android:gravity="center"
+            android:text="Turn on Location to see available agrocabs near you.Please allow location permissionn to continue "
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="14sp" />
+
+
+        <Button
+
+            android:id="@+id/permission_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:background="@drawable/button_background"
+            android:text="Allow"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-</RelativeLayout>
+
+</ScrollView>
