--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,87 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Services.MapActivity">
+    android:id="@+id/drawer_layout"
+    tools:context=".Services.MapActivity"
+    android:fitsSystemWindows="true">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        style="bottomNa"
-        android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:layout_alignParentBottom="true"
-        android:animateLayoutChanges="true"
-        android:background="@drawable/bottom_nav_backgraound"
-        android:elevation="8dp"
-        app:elevation="8dp"
-        app:itemBackground="@color/white"
-        app:itemIconTint="@drawable/bottom_nav_selector"
-        app:itemTextColor="@drawable/bottom_nav_selector"
-        app:menu="@menu/bottom_nav_menu" />
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/main_menu"
 
-        android:layout_above="@id/map_bottom_sheet">
-
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_marginBottom="0dp"
-            android:layout_height="match_parent" />
-
-
-
-    </RelativeLayout>
+        android:layout_gravity="start"/>
 
     <RelativeLayout
-        android:id="@+id/map_bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/white"
-        android:layout_above="@id/bottom_navigation">
+        android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/user_map_full_name"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:padding="10dp"
-            android:text="Welcome  "
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:layout_above="@id/map_bottom_sheet">
 
-        <Button
-            android:id="@+id/bottom_sheet_btn"
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="0dp" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/map_bottom_sheet"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:layout_alignParentBottom="true"
-            android:layout_margin="20dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:background="@drawable/button_background"
-            android:text="Choose what you want ?"
-            android:textAllCaps="false"/>
+            android:layout_marginBottom="-1dp"
+            android:background="@color/white">
+
+            <LinearLayout
+                android:id="@+id/bottom_top_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/active_dot_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="18dp"
+                    android:text="Your current locaton"
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/serviceItemRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="horizontal"
+                android:layout_below="@id/divider2"
+                android:layout_marginTop="20dp"
+                android:padding="5dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/bottom_top_layout"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorDivider" />
+
+            <Button
+                android:id="@+id/bottom_sheet_btn"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="20dp"
+                android:background="@drawable/button_background"
+                android:text="Continue to book"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/addToWatchlist"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="20dp"
+                android:background="@drawable/button_background"
+                android:text="Continue to book"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
 
+        </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/white_shadow"
+            android:gravity="center">
+<!--
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="#00008577"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?actionBarTheme"
+                app:navigationIcon="@drawable/menu_icon"/> -->
+
+            <ImageView
+
+                android:id="@+id/toolbar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+
+                android:src="@drawable/menu_icon" />
+        </RelativeLayout>
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/top_bottom_bar"
-        android:layout_width="match_parent"
-        android:elevation="2dp"
-        android:layout_height="25dp"
-        android:layout_above="@id/map_bottom_sheet"
-        android:background="@drawable/service_bottom_layout_background">
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
