--- a/app/src/main/res/layout/activity_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_on_boarding_screen.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-
-    tools:context=".Common.OnBoardingScreen"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".Common.OnBoardingScreen">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slider"
@@ -16,24 +14,23 @@
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
     </androidx.viewpager.widget.ViewPager>
+
 
     <Button
         android:id="@+id/skip_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/skip_btn"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"
-        android:onClick="skip"
         android:background="#00000000"
         android:drawableEnd="@drawable/skip_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        android:drawableRight="@drawable/skip_icon" />
+        android:drawableRight="@drawable/skip_icon"
+        android:onClick="skip"
+        android:padding="10dp"
+        android:text="@string/skip_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -43,28 +40,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <!--
+                <Button
+                    android:id="@+id/get_started_btn"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="0dp"
+                    android:background="@drawable/button_background"
+                    android:onClick="let_get_started"
+                    android:text="Let's start"
+                    android:textColor="@color/white"
+                    android:textSize="16dp"
+                    android:visibility="invisible" />
+                    -->
 
-
-       <Button
-           android:onClick="let_get_started"
-           android:id="@+id/get_started_btn"
-           android:layout_width="120dp"
-           android:layout_height="wrap_content"
-           android:background="@drawable/button_background"
-           android:text="Let's start"
-           android:layout_centerHorizontal="true"
-           android:layout_marginTop="20dp"
-           android:textSize="16dp"
-           android:visibility="invisible"
-           android:textColor="@color/white"/>
+        <Button
+            android:id="@+id/get_started_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            android:text="Let gets started"
+            android:onClick="let_get_started"
+            android:textColor="@color/white"
+            android:visibility="invisible" />
 
         <LinearLayout
             android:id="@+id/dots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:paddingBottom="20dp"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal"
+            android:paddingBottom="20dp" />
+
+
 
         <Button
             android:id="@+id/next"
@@ -72,12 +81,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-
             android:background="#00000000"
-            android:paddingBottom="30dp"
+            android:drawableEnd="@drawable/next_icon"
+            android:drawableRight="@drawable/next_icon"
             android:onClick="next"
-             android:drawableEnd="@drawable/next_icon"
-            android:drawableRight="@drawable/next_icon" />
+            android:paddingBottom="30dp" />
 
 
     </RelativeLayout>
