--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorSecondaryText">#757575</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorError">#B00020</color>
-    <color name="colorDivider">#ECECEC</color>
+    <color name="colorDivider">#BDBDBD</color>
 
 
     <color name="white">#ffffff</color>
