--- a/app/src/main/res/layout/activity_location_confirmation.xml
+++ b/app/src/main/res/layout/activity_location_confirmation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,15 +8,51 @@
     android:orientation="vertical"
     tools:context=".Services.LocationConfirmation">
 
-    <LinearLayout
+
+    <RelativeLayout
+        android:id="@+id/botom_layout"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:elevation="4dp"
-        android:layout_height="150dp">
+        android:layout_height="150dp"
+        android:layout_alignParentBottom="true"
+
+        android:elevation="4dp">
+
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:textColor="@color/black"
+            android:background="@color/colorDivider"
+            android:hint="Search other location"
+            android:padding="10dp" />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/botom_layout">
+
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="0dp" />
+
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:elevation="4dp"
+            android:background="@drawable/white_shadow">
 
             <ImageView
                 android:id="@+id/back_btn"
@@ -25,63 +61,12 @@
                 android:layout_margin="10dp"
                 android:src="@drawable/back_btn_icon" />
 
-            <TextView
-                android:id="@+id/confirm_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/back_btn"
-                android:layout_below="@id/confirm_location"
-                android:text="Confirm Location"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
         </RelativeLayout>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_below="@id/confirm_location"
-            android:background="@color/colorDivider" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:hint="Search other location"
-            android:background="@color/colorDivider"
-            android:padding="10dp"
-            android:layout_marginLeft="20dp"/>
-
-
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Continue"
-            android:padding="10dp"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_alignParentBottom="true"/>
 
 
     </RelativeLayout>
 
 
 
-</LinearLayout>
+
+</RelativeLayout>
