--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -14,34 +14,31 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:elevation="1dp">
+            android:layout_height="150dp"
+            android:background="@color/colorPrimary">
 
-            <ImageView
+
+            <RelativeLayout
                 android:id="@+id/notification_back_btn"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="15dp"
-                android:src="@drawable/back_btn_icon" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/muli_black"
-                android:text="Notifications"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:layout_margin="10dp"
+                android:background="@drawable/white_shadow"
+                android:elevation="4dp">
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/back_btn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_left_arrow"
+                    app:tint="@color/black" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
+            </RelativeLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
