--- a/app/src/main/res/layout/activity_verify_o_t_p.xml
+++ b/app/src/main/res/layout/activity_verify_o_t_p.xml
@@ -48,15 +48,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/otp_description_text"
-            android:textSize="16sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/muli"
+            android:includeFontPadding="false"
+            android:text="@string/otp_description_text"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:layout_marginTop="50dp"
-            android:includeFontPadding="false"
-            android:layout_gravity="center"/>
-        
+            android:textSize="16sp" />
+
         <com.chaos.view.PinView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
