--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/home_icon"
@@ -17,31 +17,33 @@
             android:icon="@drawable/payment_icon"
             android:title="Payments" />
 
+        <item android:title="Communicate">
+
+            <menu>
+                <item
+                    android:id="@+id/nav_share"
+                    android:icon="@drawable/share_icon"
+                    android:title="Share" />
+
+                <item
+                    android:id="@+id/nav_rateus"
+                    android:icon="@drawable/rateus_icon"
+                    android:title="Rate Us" />
+
+
+            </menu>
+        </item>
+
+
     </group>
-    <!--
-        <group android:checkableBehavior="single">
 
-            <item
-                android:id="@+id/nav_payments"
-                android:title="Payments"
-                android:icon="@drawable/payment_icon"/>
-        </group>
-        -->
-    <item android:title="Communicate">
+    <group android:checkableBehavior="single">
 
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/share_icon"
-                android:title="Share" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/logout_icon"
+            android:title="Logout" />
+    </group>
 
-            <item
-                android:id="@+id/nav_rateus"
-                android:icon="@drawable/rateus_icon"
-                android:title="Rate Us" />
-
-
-        </menu>
-    </item>
 
 </menu>
