--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#222B45</color>
+    <color name="colorPrimary">#1A73E8</color>
+    <color name="colorPrimaryDark">#1A73E8</color>
     <color name="colorAccent">#222B45</color>
     <color name="colorSecondary">#FB4A46</color>
     <color name="colorPrimaryText">#212121</color>
